file structure rework & renaming

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "target": "es5",                            /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     "module": "commonjs",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "lib": ["es2017", "dom"],                   /* Specify library files to be included in the compilation:  */
-    // "rootDir": "./src",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "./src",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "jsx": "react",                             /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    // "outDir": "dist/",                          /* Redirect output structure to the directory. */
-    // "sourceMap": true,                          /* Generates corresponding '.map' file. */
+    "outDir": "dist/",                          /* Redirect output structure to the directory. */
+    "sourceMap": true,                          /* Generates corresponding '.map' file. */
     // "allowJs": true,                         /* Allow javascript files to be compiled. */
     // "checkJs": true,                         /* Report errors in .js files. */
-    // "declaration": true,                     /* Generates corresponding '.d.ts' file. */
+    "declaration": true,                     /* Generates corresponding '.d.ts' file. */
     // "outFile": "./index.js",                 /* Concatenate and emit output to single file. */
     // "removeComments": true,                     /* Do not emit comments to output. */
     // "noEmit": true,                          /* Do not emit outputs. */
@@ -58,8 +58,11 @@
   // "files": [
   //   "./src/**/*"
   // ],
-  // "include": [
-  //   "./src/**/*"
-  // ],
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
 
